# bangumi-episode-calendar

./: .dockerignore  .eslintrc.cjs  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  bangumi.d.ts  base.dockerfile  build.mjs  eslint.config.mjs  go.mod  go.sum  index.html  lib.ts  lint-staged.config.js  main.go  nest-cli.json  package-lock.json  package.json  readme.md  request.ts  rust-toolchain.toml  taskfile.yaml  tsconfig.build.json  tsconfig.json  type.d.ts  vitest.config.ts  worker.ts  wrangler.toml
.github/: mergify.yml  renovate.json
.github/workflows/: ci.yaml  docker.yaml
.husky/: pre-commit
.yarn/releases/: yarn-3.5.0.cjs
assets/: home.html
cmd/server/: main.go
etc/: base.dockerfile  main.dockerfile
internal/api/: handler.go  index.html  routes.go
internal/bangumi/: calendar.go  client.go  types.go
internal/cache/: cache.go  redis.go
internal/calendar/: ics.go
internal/config/: config.go
internal/server/: server.go  server_test.go
internal/server/static/: bangumi-calendar.html
internal/service/: calendar.go
pkg/logger/: logger.go
src/: app.controller.ts  bangumi-calendar.html  bangumi.d.ts  bangumi.rs  cache.rs  cache.ts  calendar.rs  calendar.ts  config.rs  config.ts  controller.ts  index.js  lib.rs  logger.ts  main.rs  main.ts  module.ts  redis.ts  request.ts  routes.ts  server.rs  server.ts  service.rs  util.ts
tests/: server.test.ts  server_test.rs  setup.ts
tests/__snapshots__/: server.test.ts.snap
tests/snapshots/: server.test.ts.md  server.test.ts.snap
