[package]
name = "bangumi-episode-calendar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
async-trait = "0.1.89"
futures = "0.3.31"
html-escape = "0.2.13"
reqwest = { version = "0.12.25", default-features = false, features = [
  "json",
  "rustls-tls"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v5"] }
# Redis cache
redis = { version = "1.0.1", features = ["tokio-comp", "connection-manager"] }
# Optional request logging middleware
tower-http = { version = "0.6.8", features = ["trace"] }
axum-macros = "0.5.0"
once_cell = "1.21.3"

[dev-dependencies]
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client"] }
tower = "0.5.2"
