[package]
name = "bangumi-episode-calendar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
async-trait = "0.1.89"
futures = "0.3.32"
html-escape = "0.2.13"
reqwest = { version = "0.13.4", default-features = false, features = [
  "json",
  "http2",
  "native-tls"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
  "macros",
  "rt-multi-thread",
  "signal"
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.23.2", features = ["v5"] }
# Redis cache
redis = { version = "1.2.2", features = ["tokio-comp", "connection-manager"] }
# Optional request logging middleware
tower-http = { version = "0.6.11", features = ["trace"] }
axum-macros = "0.5.1"
once_cell = "1.21.4"

[dev-dependencies]
http = "1.4.1"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client"] }
tower = "0.5.3"
